fix ascinema player z-index

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -28,3 +28,7 @@
     flex-basis: var(--toc-width--widescreen);
   }
 }
+
+.asciinema-player .start-prompt {
+  z-index: inherit;
+}
